# ukci2026

./: .gitignore  README.md  pyproject.toml
data/: INVENTORY.md  ltla-adj.txt  nhs-adj.txt
data/graphs/: README.md
data/legacy/msagat_net/: graphs_README.md  nhs_timeseries.txt
data/processed/: data_quality_report.md
data/raw/nhs/: MANIFEST.txt
data/raw/supporting/: MANIFEST.txt
docs/: 01_RESEARCH_PROGRAMME.md  02_METHODOLOGY.md  03_TIMELINE.md  04_IMPLEMENTATION_PLAN.md  05_OPEN_QUESTIONS.md
docs/paper/: .gitignore  Makefile  README.md  authors.txt  main.tex  references.bib  title.txt
docs/paper/sections/: 01_introduction.tex  02_related_work.tex  03_forecasting.tex  04_optimisation.tex  05_case_study.tex  06_results.tex  07_discussion.tex  08_conclusion.tex
results/allocation/: e2_allocations.csv  e2_per_region_b.csv  e5_forecast_robustness.csv  e5_stress_forecast_robustness.csv  e6_budget_sweep.csv  e6_lambda_sweep.csv  e6_travel_sweep.csv  e7_origin_policy_detail.csv  e7_origin_policy_summary.csv  e8_budget_policy_comparison.csv  nsga2_pareto.csv  table2_allocation.csv  table2_allocation.tex  table2_e2.csv  table2_e2.tex
results/eda/: table_regional_summary.csv  table_wave_summary.csv
results/forecasting/: forecasts.parquet  forecasts_arima_per_region.parquet  forecasts_gru_per_region.parquet  forecasts_pinn_gru.parquet  forecasts_pinn_gru__no_decision_aware.parquet  forecasts_pinn_gru__no_level.parquet  forecasts_pinn_gru__no_params.parquet  forecasts_pinn_gru__no_pretrain.parquet  forecasts_pinn_gru__no_trend.parquet  forecasts_seasonal_naive.parquet  forecasts_xgboost_per_region.parquet  pinn_convergence_check.csv  table1_paired_tests.csv  table1_paper.csv  table1_paper.tex  table1_uncertainty.csv  table_metrics.csv  table_metrics_detail.csv  train_log.txt
scripts/: build_forecast_figure.py  build_metric_table.py  build_regional_dataset.py  build_regional_features.py  check_pinn_convergence.py  download_external_data.py  download_nhs_data.py  run_eda.py  train_forecasters.py
src/: utils.py
src/critical_care_surge/: __init__.py
src/critical_care_surge/data/: __init__.py  loader.py
src/critical_care_surge/evaluation/: __init__.py  forecast_metrics.py
src/critical_care_surge/forecasting/: pinn_seird.py
src/critical_care_surge/optimization/: __init__.py
src/critical_care_surge/utils/: __init__.py  seed.py
src/data/: loader.py  nhs_download.py  regional_dataset.py  regional_features.py  scenarios.py  supporting_downloads.py
src/evaluation/: allocation_metrics.py  eda.py  figures.py  forecast_evaluation.py
src/forecasting/: __init__.py  baselines.py  composite_loss.py  pinn_seird.py  train_forecasters.py
src/optimization/: allocate.py  allocation_experiments.py  regional_allocation.py
tests/: __init__.py
