[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "critical-care-surge"
version = "0.1.0"
description = "Forecast-driven metaheuristic surge capacity planning for NHS England critical care (UKCI 2026)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Michael Ajao-Olarinoye", email = "olarinoyem@coventry.ac.uk" },
    { name = "Abiola Babatunde" },
    { name = "Vasile Palade" },
]
keywords = [
    "physics-informed neural networks",
    "graph attention",
    "epidemic forecasting",
    "metaheuristics",
    "facility location",
    "robust optimization",
    "NHS",
    "critical care",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]

# Runtime dependencies. Pin tightly enough for reproducibility but loose
# enough that small bug-fix updates do not break the build.
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.11,<2.0",
    "openpyxl>=3.1,<4.0",
    "requests>=2.31,<3.0",
    "torch>=2.1,<3.0",
    "scikit-learn>=1.3,<2.0",
    "xgboost>=2.0,<3.0",
    "statsmodels>=0.14,<1.0",
    "pyomo>=6.7,<7.0",
    "pulp>=2.7,<3.0",
    "pymoo>=0.6,<1.0",
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<1.0",
    "geopandas>=0.14,<2.0",
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    "tqdm>=4.66,<5.0",
    "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.92",
    "ruff>=0.1.9",
    "mypy>=1.7",
    "pre-commit>=3.5",
    "jupyter>=1.0",
    "ipykernel>=6.27",
]
gurobi = ["gurobipy>=11.0"]
prophet = ["prophet>=1.1"]

[project.urls]
Repository = "https://github.com/olarinoyem/ukci2026"  # placeholder, update on push
Documentation = "https://github.com/olarinoyem/ukci2026/tree/main/docs"

[project.scripts]
ukci-forecast-evaluation = "evaluation.forecast_evaluation:main"
ukci-build-regional-dataset = "data.regional_dataset:main"
ukci-build-regional-features = "data.regional_features:main"
ukci-download-nhs-data = "data.nhs_download:main"
ukci-download-supporting-data = "data.supporting_downloads:main"
ukci-run-allocation-e2 = "optimization.allocation_experiments:main"
ukci-build-allocation-figures = "optimization.allocation_experiments:build_allocation_figures_main"
ukci-run-allocation-sweeps = "optimization.allocation_experiments:run_allocation_sweeps_main"
ukci-run-eda = "evaluation.eda:main"
ukci-run-pinn-ablations = "forecasting.train_forecasters:run_pinn_ablations_main"
ukci-train-forecasters = "forecasting.train_forecasters:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["utils"]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist", "data", "results"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C4", "PIE", "RET", "SIM", "ARG"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradual typing
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]
